refactor:라인업 컨트롤러 메서드명 변경 및 getLineupById 서비스 작동 방식 변경